[package]
name = "l2"
description = "L2 is a Pytorch-style Tensor+Autograd library written in Rust"
version = "1.0.3"
authors = ["Bilal Khan <bkkaggle@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/bkkaggle/L2"
documentation = "https://docs.rs/l2"
repository = "https://github.com/bkkaggle/L2"
readme = "README.md"

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
blas = "0.20.0"


[target.x86_64-apple-darwin.dependencies]
blas-src = { version = "0.6", features = ["accelerate"] }

[target.x86_64-unknown-linux-gnu.dependencies]
blas-src = { version = "0.6", features = ["openblas"] }
